# TranCIT

./: .flake8  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  Readme.md  SECURITY.md  TROUBLESHOOTING.md  add_mypy_ignores.py  fix_mypy_issues.py  mypy.ini  mypy_simple.ini  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_issue.md  feature_request.md  performance_issue.md  research_question.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
dcs/: __init__.py  causality.py  config.py  logger_config.py  models.py  pipeline.py  simulation.py
dcs/causality/: __init__.py  base.py  dcs.py  detecting_analysis_pipeline.py  get_causal_strength.py  granger.py  rdcs.py  time_varying.py  transfer_entropy.py
dcs/core/: __init__.py  base.py  exceptions.py
dcs/models/: __init__.py  bic_selection.py  model_selection.py  model_validation.py  var_estimation.py
dcs/pipeline/: __init__.py  orchestrator.py  stages.py
dcs/simulation/: __init__.py  ar_simulation.py  oscillator_simulation.py  utils.py  var_simulation.py
dcs/src/: bic.py  estimate_coef.py  select_model_order.py
dcs/utils/: __init__.py  core.py  helpers.py  plotting.py  preprocess.py  residuals.py  signal.py  timefreq.py
dcs/utils/core/: estimating_residuals.py  finding_best_shrinked_locs.py  finding_peak_loc.py  getting_Yt.py  getting_residuals.py  residuals.py
dcs/utils/preprocessing/: extracting_events.py  removing_artif_trials.py  singular.py
dcs/utils/simulate/: ar.py  signals.py  simulate_ar_event.py  simulate_timefreq.py  var.py
docs/: Makefile  api.rst  conf.py  contributing.rst  event_detection_preprocessing.rst  examples.rst  index.rst  installation.rst  license.rst  quickstart.rst  requirements.txt  software_architecture.rst  tutorials.rst
examples/: 1_dcs_introduction.ipynb  README.md  basic_usage.py  compute_ca3_ca1_causality.py  config_usage.py  dcs_introduction.ipynb  lfp_pipeline.py  plot_ca3_ca1_dcs_results.py  plot_ca3_ca1_example_signals.ipynb  simulation_demo.py
examples/figures/: events_causality_plot.eps  events_stats_plot.eps  events_waveforms_plot.eps  figure4a_replication_shao.eps  figure4b_replication_shao.eps
paper/: paper.bib  paper.md
tests/: test_backward_compatibility.py  test_causality.py  test_config.py  test_integration.py  test_models.py  test_pipeline.py  test_simulation.py
tests/utils/: test_core.py  test_helpers.py  test_preprocess.py  test_residuals.py
tools/: README.md  add_mypy_ignores.py  fix_linting.py  fix_mypy_issues.py  run_mypy_with_threshold.py
trancit/models/: bic_selection.py
trancit/simulation/: utils.py
