[project]
name = "dynamic-causal-strength"
version = "0.1.0"
description = "A package for dynamic causal strength analysis."
authors = [{ name = "Salar Nouri", email = "salr.nouri@gmail.com" }]
license = { text = "BSD-2-Clause" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.14"
]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest", "flake8", "black"]

[tool.setuptools.package-data]
"dcs" = ["py.typed"]
