[project]
name = "dynamic-causal-strength"
dynamic = ["version"]
description = "A Python package for quantifying causal relationships in multivariate time series data using dynamic causal strength (DCS) methods."
authors = [{ name = "Salar Nouri", email = "salr.nouri@gmail.com" }]
maintainers = [{ name = "Salar Nouri", email = "salr.nouri@gmail.com" }]
license = { text = "BSD-2-Clause" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["causality", "time-series", "neuroscience", "statistics", "causal-inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.19.5",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/CMC-lab/dcs"
Documentation = "https://dynamic-causal-strength.readthedocs.io"
Repository = "https://github.com/CMC-lab/dcs"
"Bug Tracker" = "https://github.com/CMC-lab/dcs/issues"

[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "black>=23.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx_rtd_theme>=1.0",
    "sphinx-sitemap>=2.0",
    "myst-parser>=1.0",
]
test = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.package-data]
"dcs" = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E712"]
exclude = [
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    ".git",
    ".pytest_cache",
    ".mypy_cache"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=dcs --cov-report=term-missing --cov-report=html"

[tool.setuptools_scm]
write_to = "dcs/_version.py"
version_scheme = "post-release"
local_scheme = "dirty-tag"
